# Template_C

./: CMakeLists.txt  COPYING  README.md
src/: main.c
